build.log
   Compiling aios-daemon v0.1.0 (D:\git\rorychatt\AIOS\crates\aios-daemon)
error[E0425]: cannot find value `context` in this scope
  --> crates\aios-daemon\src\llm_router.rs:76:55
   |
15 |     fn execute(&self, intent: &Intent, _context: &SystemContext) -> ExecutionResult {
   |                                        -------- `_context` defined here
...
76 |                                         .current_dir(&context.active_directory)
   |                                                       ^^^^^^^
   |
help: the leading underscore in `_context` marks it as unused, consider renaming it to `context`
   |
15 -     fn execute(&self, intent: &Intent, _context: &SystemContext) -> ExecutionResult {
15 +     fn execute(&self, intent: &Intent, context: &SystemContext) -> ExecutionResult {
   |

For more information about this error, try `rustc --explain E0425`.
error: could not compile `aios-daemon` (bin "aios-daemon") due to 1 previous error
